--- a/index.html
+++ b/index.html
@@ -227,11 +227,11 @@
                                     </div>
                                     <div class="dipper">
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:email"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:email"></span>
                                             <span class="txt-theme"> ronald_royale@gmail.com</span>
                                         </p>
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:phone-filled"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:phone-filled"></span>
                                             <span class="txt-theme"> +0021212120</span>
                                         </p>
                                     </div>
@@ -297,11 +297,11 @@
                                     </div>
                                     <div class="dipper">
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:email"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:email"></span>
                                             <span class="txt-theme"> ronald_royale@gmail.com</span>
                                         </p>
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:phone-filled"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:phone-filled"></span>
                                             <span class="txt-theme"> +0021212120</span>
                                         </p>
                                     </div>
@@ -367,11 +367,11 @@
                                     </div>
                                     <div class="dipper">
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:email"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:email"></span>
                                             <span class="txt-theme"> ronald_royale@gmail.com</span>
                                         </p>
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:phone-filled"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:phone-filled"></span>
                                             <span class="txt-theme"> +0021212120</span>
                                         </p>
                                     </div>
@@ -437,11 +437,11 @@
                                     </div>
                                     <div class="dipper">
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:email"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:email"></span>
                                             <span class="txt-theme"> ronald_royale@gmail.com</span>
                                         </p>
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:phone-filled"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:phone-filled"></span>
                                             <span class="txt-theme"> +0021212120</span>
                                         </p>
                                     </div>
@@ -507,11 +507,11 @@
                                     </div>
                                     <div class="dipper">
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:email"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:email"></span>
                                             <span class="txt-theme"> ronald_royale@gmail.com</span>
                                         </p>
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:phone-filled"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:phone-filled"></span>
                                             <span class="txt-theme"> +0021212120</span>
                                         </p>
                                     </div>
@@ -577,11 +577,11 @@
                                     </div>
                                     <div class="dipper">
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:email"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:email"></span>
                                             <span class="txt-theme"> ronald_royale@gmail.com</span>
                                         </p>
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:phone-filled"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:phone-filled"></span>
                                             <span class="txt-theme"> +0021212120</span>
                                         </p>
                                     </div>
@@ -647,11 +647,11 @@
                                     </div>
                                     <div class="dipper">
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:email"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:email"></span>
                                             <span class="txt-theme"> ronald_royale@gmail.com</span>
                                         </p>
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:phone-filled"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:phone-filled"></span>
                                             <span class="txt-theme"> +0021212120</span>
                                         </p>
                                     </div>
@@ -717,11 +717,11 @@
                                     </div>
                                     <div class="dipper">
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:email"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:email"></span>
                                             <span class="txt-theme"> ronald_royale@gmail.com</span>
                                         </p>
                                         <p class="mb-0">
-                                            <span class="iconify text-black" data-icon="carbon:phone-filled"></span>
+                                            <span class="iconify text-secondary" data-icon="carbon:phone-filled"></span>
                                             <span class="txt-theme"> +0021212120</span>
                                         </p>
                                     </div>
