--- a/candidates.html
+++ b/candidates.html
@@ -30,6 +30,22 @@
                         </a>
                     </li>
                     <li class="nav-item ">
+                        <a href="./kanban-board.html">
+                            <span class="iconify" data-icon="bxs:briefcase"></span>
+                            kanban-board
+                        </a>
+                    </li>
+                    <li class="nav-item ">
+                        <a href="./candidates.html">
+                            <span class="iconify" data-icon="icomoon-free:users"></span>
+                            Candidates
+                        </a>
+                    </li>
+                 
+                    <!-- divider title -->
+                    <p class="nav-types mt-4">Recruitment</p>
+
+                    <li class="nav-item ">
                         <a href="./index.html">
                             <span class="iconify" data-icon="heroicons-outline:inbox-in"></span>
                             Inbox
@@ -39,21 +55,6 @@
                         <a href="./index.html">
                             <span class="iconify" data-icon="uim:calender"></span>
                             Calender & Tools
-                        </a>
-                    </li>
-                    <!-- divider title -->
-                    <p class="nav-types mt-4">Recruitment</p>
-
-                    <li class="nav-item ">
-                        <a href="./index.html">
-                            <span class="iconify" data-icon="bxs:briefcase"></span>
-                            Jobs
-                        </a>
-                    </li>
-                    <li class="nav-item ">
-                        <a href="./candidates.html">
-                            <span class="iconify" data-icon="icomoon-free:users"></span>
-                            Candidates
                         </a>
                     </li>
                     <li class="nav-item ">
