--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a href="./jobs.html">
+                        <a href="./kanban-board.html">
                             <span class="iconify" data-icon="bxs:briefcase"></span>
-                            Jobs
+                            kanban-board
                         </a>
                     </li>
                     <li class="nav-item ">
