--- a/candidates.html
+++ b/candidates.html
@@ -41,7 +41,12 @@
                             Candidates
                         </a>
                     </li>
-                 
+                    <li class="nav-item">
+                        <a href="./questionaair.html">
+                            <span class="iconify" data-icon="icomoon-free:users"></span>
+                            Questionair
+                        </a>
+                    </li>
                     <!-- divider title -->
                     <p class="nav-types mt-4">Recruitment</p>
 
