--- a/questionaair.html
+++ b/questionaair.html
@@ -160,14 +160,14 @@
             <div class="dashboard-content py-2 px-4">
                 <!-- top info bar -->
                 <div class="row my-4">
-                    <div class="col-lg-12">
-                        <div class="col-lg-2">
-                            <img src="" alt="">
+                    <div class="row">
+                        <div class="col-lg-1">
+                            <img src="./images/profile.png" alt="" width="80px" class="align-middle">
                         </div>
-                        <div class="col-lg-10">
+                        <div class="col-lg-10 ps-3">
                             <h4 class="fw-bold title d-inline mb-0 align-middle me-2 lh-lg text-capitalize">New hire
-                                survey:15 days</h1>
-                                <h6 class="text-muted">Submitted Tuesday, Sep 28, 2021 at 3.55 PDT</h6>
+                                survey </h1>
+                                <h6 class="text-muted">Submitted Tuesday, Sep 28, 2021 </h6>
                         </div>
                     </div>
                 </div>
@@ -180,14 +180,7 @@
                                 <span class="text-muted">Name</span>
                                 <span class="txt">Ashiqul Islam</span>
                             </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="d-flex flex-column">
-                                <span class="text-muted">Location</span>
-                                <span class="txt">Jashore, Bangladesh</span>
-                            </div>
-
-                        </div>
+                        </div> 
                         <div class="col-lg-2">
                             <div class="d-flex flex-column">
                                 <span class="text-muted">Department</span>
