--- a/questionaair.html
+++ b/questionaair.html
@@ -161,26 +161,26 @@
                 <!-- top info bar -->
                 <div class="row my-4">
                     <div class="row">
-                        <div class="col-lg-1">
+                        <div class="col-lg-1 text-center">
                             <img src="./images/profile.png" alt="" width="80px" class="align-middle">
                         </div>
-                        <div class="col-lg-10 ps-3">
+                        <div class="col-lg-10 ps-0">
                             <h4 class="fw-bold title d-inline mb-0 align-middle me-2 lh-lg text-capitalize">New hire
-                                survey </h1>
+                                survey
+                                </h1>
                                 <h6 class="text-muted">Submitted Tuesday, Sep 28, 2021 </h6>
                         </div>
                     </div>
                 </div>
 
                 <div class="p-3 rounded-3 questionair">
-
                     <div class="row">
                         <div class="col-lg-2">
                             <div class="d-flex flex-column">
                                 <span class="text-muted">Name</span>
                                 <span class="txt">Ashiqul Islam</span>
                             </div>
-                        </div> 
+                        </div>
                         <div class="col-lg-2">
                             <div class="d-flex flex-column">
                                 <span class="text-muted">Department</span>
@@ -267,7 +267,7 @@
                                 <input type="radio" class="optionCheker" name="q1" value="2" id="er2">
                                 <label for="er2">😱 No</label>
                             </div>
-                          
+
 
                         </div>
                     </div>
@@ -281,7 +281,7 @@
                             <div class="item">
                                 <input type="radio" class="optionCheker" name="q1" value="2" id="er2">
                                 <label for="er2">😱 No</label>
-                            </div>  
+                            </div>
                         </div>
                     </div>
                 </div>
