--- a/questionaair.html
+++ b/questionaair.html
@@ -161,15 +161,16 @@
                 <!-- top info bar -->
                 <div class="row my-4">
                     <div class="row">
-                        <div class="col-lg-1 text-center">
+                        <div class="col-lg-12 d-flex flex-wrap">
                             <img src="./images/profile.png" alt="" width="80px" class="align-middle">
-                        </div>
-                        <div class="col-lg-10 ps-0">
+                           <div class="ms-2">
                             <h4 class="fw-bold title d-inline mb-0 align-middle me-2 lh-lg text-capitalize">New hire
                                 survey
-                                </h1>
-                                <h6 class="text-muted">Submitted Tuesday, Sep 28, 2021 </h6>
+                             </h4>
+                           <h6 class="text-muted">Submitted Tuesday, Sep 28, 2021 </h6>
+                           </div>
                         </div>
+                        
                     </div>
                 </div>
 
