--- a/kanban-board.html
+++ b/kanban-board.html
@@ -47,6 +47,12 @@
                             Questionair
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a href="./task.html">
+                            <span class="iconify" data-icon="icomoon-free:users"></span>
+                            Task
+                        </a>
+                    </li>
                  
                     <!-- divider title -->
                     <p class="nav-types mt-4">Recruitment</p>
